@@ -9,7 +9,11 @@ import com.googlecode.madschuelerturnier.model.enums.MessageTyp;
 import com.googlecode.madschuelerturnier.model.integration.MessageWrapperToSend;
 import org.apache.log4j.Logger;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.concurrent.ConcurrentLinkedQueue;
 
 /**
  * Ist eine ausgehende HTTP Verbindung
@@ -17,7 +21,7 @@ import java.util.*;
  * @author $Author: marthaler.worb@gmail.com $
  * @since 1.2.8
  */
-public class TransportEndpointSender extends Thread{
+public class TransportEndpointSender extends Thread {
 
     private static final Logger LOG = Logger.getLogger(TransportEndpointSender.class);
 
@@ -34,7 +38,13 @@ public class TransportEndpointSender extends Thread{
     private boolean online = true;
     private boolean running = true;
 
-    private LinkedList<MessageWrapperToSend> messagesOut = new LinkedList<MessageWrapperToSend>();
+    private List<MessageWrapperToSend> messagesOut = Collections.synchronizedList(new ArrayList<MessageWrapperToSend>());
+
+    public int getMessagecount() {
+        return messagecount;
+    }
+
+    private int messagecount = 0;
 
 
     private IntegrationControllerImpl controller;
@@ -44,13 +54,12 @@ public class TransportEndpointSender extends Thread{
         this.ownConnectionString = ownConnectionString;
         this.remoteConnectionString = remoteConnectionString;
         this.startuptime = System.currentTimeMillis();
-
-        start();
-        LOG.info("TransportEndpointSender ("+remoteConnectionString+"): sender registriert: "+this.ownConnectionString + "-->" +remoteConnectionString);
+        LOG.info("TransportEndpointSender (" + remoteConnectionString + "): sender registriert: " + this.ownConnectionString + "-->" + remoteConnectionString);
     }
 
-    public void run(){
-        while (running){
+    public void run() {
+        while (running) {
+            MessageWrapperToSend send = null;
             try {
 
                 MessageWrapperToSend wrapper = new MessageWrapperToSend();
@@ -59,58 +68,69 @@ public class TransportEndpointSender extends Thread{
                 wrapper.setTyp(MessageTyp.PULLREQUEST);
                 wrapper.setFilter(this.controller.getMessagefilter());
 
-                MessageWrapperToSend send = getMessageToSendOutRequest();
-                if(send != null){
-                      wrapper = send;
-                    LOG.info("TransportEndpointSender ("+remoteConnectionString+") sende nachricht: " + wrapper);
+                send = getMessageToSendOutRequest();
+                if (send != null) {
+                    wrapper = send;
+                    LOG.info("TransportEndpointSender (" + remoteConnectionString + ") sende nachricht: " + wrapper);
                 }
 
                 MessageWrapperToSend response = MessageSenderUtil.send(remoteConnectionString, wrapper);
 
-                if(response != null && response.getTyp() != MessageTyp.ACK){
-                online = true;
-                LOG.info("TransportEndpointSender ("+remoteConnectionString+") nachricht erhalten: " + response);
-                this.controller.messageReceivedFromRemote(response);
+                if (response != null && response.getTyp() != MessageTyp.ACK) {
+                    online = true;
+                    LOG.info("TransportEndpointSender (" + remoteConnectionString + ") nachricht erhalten: " + response);
+                    this.controller.messageReceivedFromRemote(response);
+                    Thread.sleep(2000);
                 }
 
-                if(response == null){
+                if (response == null) {
                     online = false;
                     Thread.sleep(5000);
-                } else
-
-                if(response.getTyp() == MessageTyp.ACK){
+                } else if (response.getTyp() == MessageTyp.ACK) {
                     online = true;
-                    Thread.sleep(1000);
+                    Thread.sleep(2000);
                 }
 
             } catch (Exception e) {
-                LOG.error("TransportEndpointSender ("+remoteConnectionString+") fehler:"+e.getMessage(),e);
+                if (online) {
+                    LOG.error("TransportEndpointSender (" + remoteConnectionString + ") fehler:" + e.getMessage(), e);
+                }
+                if(send != null){
+                this.messagesOut.add(0,send);
+                }
+                try {
+                    Thread.sleep(5000);
+                } catch (InterruptedException e1) {
+                    LOG.error(e.getMessage(),e);
+                }
                 online = false;
             }
         }
     }
 
-     public synchronized  MessageWrapperToSend getMessageToSendOutRequest(){
-         if(this.messagesOut.size() > 0){
-             MessageWrapperToSend out = this.messagesOut.removeFirst();
+    public synchronized MessageWrapperToSend getMessageToSendOutRequest() {
+        if (this.messagesOut.size() > 0) {
+            MessageWrapperToSend out = this.messagesOut.remove(0);
 
-                 return out;
+            return out;
 
-         }
-          return null;
-     }
+        }
+        return null;
+    }
 
     public void sendMessage(MessageWrapperToSend wr) {
         // nur schicken wenn nicht bereits schon mal geschickt
-        if(!wr.getNodesThatReceivedThisMessage().contains(this.ownConnectionString) && !wr.getSource().equals(this.remoteConnectionString)){
+        if (!wr.getNodesThatReceivedThisMessage().contains(this.ownConnectionString) && !wr.getSource().equals(this.remoteConnectionString)) {
             wr.getNodesThatReceivedThisMessage().add(this.ownConnectionString);
             messagesOut.add(wr);
+            this.messagecount = this.messagecount + 1;
+            LOG.debug("message added to:" + this.getRemoteConnectionString());
         }
     }
 
     public void teardown() {
         this.running = false;
-       LOG.info("TransportEndpointSender ("+remoteConnectionString+") down: " + this.remoteConnectionString);
+        LOG.info("TransportEndpointSender (" + remoteConnectionString + ") down: " + this.remoteConnectionString);
     }
 
     public long getStartuptime() {
@@ -125,7 +145,7 @@ public class TransportEndpointSender extends Thread{
         return online;
     }
 
-    public int countMessagesToSend(){
+    public int countMessagesToSend() {
         return this.messagesOut.size();
     }
 
